--- a/vignettes/propensity_scores.Rmd
+++ b/vignettes/propensity_scores.Rmd
@@ -20,7 +20,7 @@ library(psborrow2)
 Propensity scores (PS) methods offer various ways to adjust analyses for differences in groups of patients.
 @austin2013 discusses various approaches for using PS with survival analyses to obtain effect measures similar to
 randomized controlled trials. @wang2021 discuss using PS for IPTW, matching and stratification in combination with a Bayesian analysis.
-These methods allow for the separation of the design and analysis into two stages, which may be attractive in a regulatory setting.
+These methods allow for the separation of the design and analysis into two stages, which may be attractive in a regulatory setting. 
 Another approach is the direct inclusion of the PS as a covariate in the outcome model.
 
 ## Alternative PS Weights with `WeightIt`
@@ -119,10 +119,20 @@ analysis_att <- create_analysis_obj(
 )
 #> Inputs look good.
 #> NOTE: dropping column `ext` for full borrowing.
-#> Error: CmdStan path has not been set yet. See ?set_cmdstan_path.
+#> Stan program compiled successfully!
+#> Ready to go! Now call `mcmc_sample()`.
 
 result_att <- mcmc_sample(analysis_att)
-#> Error in h(simpleError(msg, call)): error in evaluating the argument 'x' in selecting a method for function 'mcmc_sample': object 'analysis_att' not found
+#> Running MCMC with 4 sequential chains...
+#> 
+#> Chain 1 finished in 2.9 seconds.
+#> Chain 2 finished in 2.4 seconds.
+#> Chain 3 finished in 2.6 seconds.
+#> Chain 4 finished in 2.7 seconds.
+#> 
+#> All 4 chains finished successfully.
+#> Mean chain execution time: 2.6 seconds.
+#> Total execution time: 11.0 seconds.
 ```
 
 
@@ -259,10 +269,20 @@ analysis_match <- create_analysis_obj(
 )
 #> Inputs look good.
 #> NOTE: dropping column `ext` for full borrowing.
-#> Error: CmdStan path has not been set yet. See ?set_cmdstan_path.
+#> Stan program compiled successfully!
+#> Ready to go! Now call `mcmc_sample()`.
 
 result_match <- mcmc_sample(analysis_match)
-#> Error in h(simpleError(msg, call)): error in evaluating the argument 'x' in selecting a method for function 'mcmc_sample': object 'analysis_match' not found
+#> Running MCMC with 4 sequential chains...
+#> 
+#> Chain 1 finished in 1.0 seconds.
+#> Chain 2 finished in 1.1 seconds.
+#> Chain 3 finished in 1.1 seconds.
+#> Chain 4 finished in 1.0 seconds.
+#> 
+#> All 4 chains finished successfully.
+#> Mean chain execution time: 1.1 seconds.
+#> Total execution time: 4.5 seconds.
 ```
 
 
@@ -282,10 +302,20 @@ analysis_iptw_bdb <- create_analysis_obj(
   treatment = treatment_details("trt", normal_prior(0, 10000))
 )
 #> Inputs look good.
-#> Error: CmdStan path has not been set yet. See ?set_cmdstan_path.
+#> Stan program compiled successfully!
+#> Ready to go! Now call `mcmc_sample()`.
 
 result_iptw_bdb <- mcmc_sample(analysis_iptw_bdb)
-#> Error in h(simpleError(msg, call)): error in evaluating the argument 'x' in selecting a method for function 'mcmc_sample': object 'analysis_iptw_bdb' not found
+#> Running MCMC with 4 sequential chains...
+#> 
+#> Chain 1 finished in 5.2 seconds.
+#> Chain 2 finished in 4.7 seconds.
+#> Chain 3 finished in 5.5 seconds.
+#> Chain 4 finished in 5.9 seconds.
+#> 
+#> All 4 chains finished successfully.
+#> Mean chain execution time: 5.3 seconds.
+#> Total execution time: 21.7 seconds.
 ```
 
 
@@ -306,10 +336,20 @@ analysis_pp01 <- create_analysis_obj(
 )
 #> Inputs look good.
 #> NOTE: dropping column `ext` for full borrowing.
-#> Error: CmdStan path has not been set yet. See ?set_cmdstan_path.
+#> Stan program compiled successfully!
+#> Ready to go! Now call `mcmc_sample()`.
 
 result_pp01 <- mcmc_sample(analysis_pp01)
-#> Error in h(simpleError(msg, call)): error in evaluating the argument 'x' in selecting a method for function 'mcmc_sample': object 'analysis_pp01' not found
+#> Running MCMC with 4 sequential chains...
+#> 
+#> Chain 1 finished in 3.1 seconds.
+#> Chain 2 finished in 3.5 seconds.
+#> Chain 3 finished in 4.5 seconds.
+#> Chain 4 finished in 2.8 seconds.
+#> 
+#> All 4 chains finished successfully.
+#> Mean chain execution time: 3.5 seconds.
+#> Total execution time: 14.1 seconds.
 ```
 
 
@@ -329,7 +369,18 @@ result_full <- mcmc_sample(
 )
 #> Inputs look good.
 #> NOTE: dropping column `ext` for full borrowing.
-#> Error in h(simpleError(msg, call)): error in evaluating the argument 'x' in selecting a method for function 'mcmc_sample': CmdStan path has not been set yet. See ?set_cmdstan_path.
+#> Stan program compiled successfully!
+#> Ready to go! Now call `mcmc_sample()`.
+#> Running MCMC with 4 sequential chains...
+#> 
+#> Chain 1 finished in 2.3 seconds.
+#> Chain 2 finished in 2.2 seconds.
+#> Chain 3 finished in 2.3 seconds.
+#> Chain 4 finished in 2.0 seconds.
+#> 
+#> All 4 chains finished successfully.
+#> Mean chain execution time: 2.2 seconds.
+#> Total execution time: 9.2 seconds.
 
 result_none <- mcmc_sample(
   create_analysis_obj(
@@ -341,7 +392,18 @@ result_none <- mcmc_sample(
 )
 #> Inputs look good.
 #> NOTE: excluding `ext` == `1`/`TRUE` for no borrowing.
-#> Error in h(simpleError(msg, call)): error in evaluating the argument 'x' in selecting a method for function 'mcmc_sample': CmdStan path has not been set yet. See ?set_cmdstan_path.
+#> Stan program compiled successfully!
+#> Ready to go! Now call `mcmc_sample()`.
+#> Running MCMC with 4 sequential chains...
+#> 
+#> Chain 1 finished in 1.1 seconds.
+#> Chain 2 finished in 1.3 seconds.
+#> Chain 3 finished in 1.0 seconds.
+#> Chain 4 finished in 1.0 seconds.
+#> 
+#> All 4 chains finished successfully.
+#> Mean chain execution time: 1.1 seconds.
+#> Total execution time: 4.7 seconds.
 
 result_bdb <- mcmc_sample(
   create_analysis_obj(
@@ -352,7 +414,18 @@ result_bdb <- mcmc_sample(
   )
 )
 #> Inputs look good.
-#> Error in h(simpleError(msg, call)): error in evaluating the argument 'x' in selecting a method for function 'mcmc_sample': CmdStan path has not been set yet. See ?set_cmdstan_path.
+#> Stan program compiled successfully!
+#> Ready to go! Now call `mcmc_sample()`.
+#> Running MCMC with 4 sequential chains...
+#> 
+#> Chain 1 finished in 5.1 seconds.
+#> Chain 2 finished in 6.9 seconds.
+#> Chain 3 finished in 4.6 seconds.
+#> Chain 4 finished in 5.7 seconds.
+#> 
+#> All 4 chains finished successfully.
+#> Mean chain execution time: 5.6 seconds.
+#> Total execution time: 22.6 seconds.
 ```
 
 
@@ -369,7 +442,6 @@ models <- list(
   "Matching 1:1" = result_match,
   "BDB" = result_bdb
 )
-#> Error in eval(expr, envir, enclos): object 'result_none' not found
 ```
 
 We can use `summary()` to extract the variable of interest and specify summary statistics.
@@ -379,10 +451,20 @@ results_table <- do.call(rbind, lapply(
   models,
   function(i) i$summary("HR_trt", c("mean", "median", "sd", "quantile2"))
 ))
-#> Error in eval(expr, envir, enclos): object 'models' not found
 knitr::kable(cbind(models = names(models), results_table), digits = 3)
-#> Error in eval(expr, envir, enclos): object 'models' not found
 ```
+
+
+
+|models         |variable |  mean| median|    sd|    q5|   q95|
+|:--------------|:--------|-----:|------:|-----:|-----:|-----:|
+|No borrowing   |HR_trt   | 0.896|  0.875| 0.183| 0.636| 1.225|
+|Full borrowing |HR_trt   | 0.387|  0.385| 0.049| 0.310| 0.472|
+|Power Prior 01 |HR_trt   | 0.635|  0.626| 0.107| 0.478| 0.823|
+|ATT Weights    |HR_trt   | 0.894|  0.887| 0.127| 0.698| 1.113|
+|IPTW + BDB     |HR_trt   | 0.897|  0.882| 0.163| 0.658| 1.188|
+|Matching 1:1   |HR_trt   | 0.793|  0.782| 0.128| 0.600| 1.018|
+|BDB            |HR_trt   | 0.872|  0.854| 0.175| 0.619| 1.186|
 
 We can extract a `draws` object from each model and plot the posterior distribution of the
 treatment hazard ratio.
@@ -393,14 +475,13 @@ plot(density(models[[1]]$draws("HR_trt")),
   xlab = "HR_trt",
   main = "Posterior Hazard Ratio"
 )
-#> Error in h(simpleError(msg, call)): error in evaluating the argument 'x' in selecting a method for function 'plot': object 'models' not found
 for (i in 2:7) {
   lines(density(models[[i]]$draws("HR_trt")), col = i, lty = i, lwd = 2)
 }
-#> Error in eval(expr, envir, enclos): object 'models' not found
 legend("topright", col = seq_along(models), lty = seq_along(models), legend = names(models))
-#> Error in eval(expr, envir, enclos): object 'models' not found
 ```
+
+<img src="figure-propensity_scores-plots-1.png" alt="plot of chunk plots" style="display: block; margin: auto;" />
 
 Here we see no borrowing and full borrowing at the extremes and the other methods in between.
 
