--- a/vignettes/original/_data_simulation.Rmd
+++ b/vignettes/original/_data_simulation.Rmd
@@ -57,6 +57,7 @@ with_age <- create_baseline_object(
     covariance_int = covariance_matrix(5)
   )
 )
+set.seed(123)
 generate(with_age)
 ```
 
@@ -100,5 +101,6 @@ with_age_score@transformations <- list(
   score_high = binary_cutoff("score", int_cutoff = 0.7, ext_cutoff = 0.7),
   score_rounded = function(data) round(data$score)
 )
+set.seed(123)
 generate(with_age_score)
 ```
