--- a/vignettes/original/_propensity_scores.Rmd
+++ b/vignettes/original/_propensity_scores.Rmd
@@ -72,7 +72,7 @@ love.plot(weightit_model, stars = "std")
 
 The PS values can be copied into the data set and the analysis object can be constructed as before.
 
-```{r covs}
+```{r covs-no-echo, echo= FALSE}
 example_dataframe$att <- weightit_model$weights
 
 example_matrix_att <- create_data_matrix(
@@ -90,7 +90,28 @@ analysis_att <- create_analysis_obj(
   treatment = treatment_details("trt", normal_prior(0, 10000))
 )
 
-result_att <- mcmc_sample(analysis_att)
+result_att <- mcmc_sample(analysis_att, seed = 123)
+```
+
+```{r covs-no-eval, eval= FALSE}
+example_dataframe$att <- weightit_model$weights
+
+example_matrix_att <- create_data_matrix(
+  example_dataframe,
+  ext_flag_col = "ext",
+  outcome = c("time", "cnsr"),
+  trt_flag_col = "trt",
+  weight_var = "att"
+)
+
+analysis_att <- create_analysis_obj(
+  data_matrix = example_matrix_att,
+  outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000), weight_var = "att"),
+  borrowing = borrowing_details("Full borrowing", "ext"),
+  treatment = treatment_details("trt", normal_prior(0, 10000))
+)
+
+result_att <- mcmc_sample(analysis_att, seed = 123)
 ```
 
 
@@ -142,7 +163,7 @@ example_matrix_match <- create_data_matrix(
 )
 ```
 
-```{r}
+```{r, echo = FALSE}
 analysis_match <- create_analysis_obj(
   data_matrix = example_matrix_match,
   outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000)),
@@ -150,7 +171,18 @@ analysis_match <- create_analysis_obj(
   treatment = treatment_details("trt", normal_prior(0, 10000))
 )
 
-result_match <- mcmc_sample(analysis_match)
+result_match <- mcmc_sample(analysis_match, seed = 123)
+```
+
+``{r, eval = FALSE}
+analysis_match <- create_analysis_obj(
+  data_matrix = example_matrix_match,
+  outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000)),
+  borrowing = borrowing_details("Full borrowing", "ext"),
+  treatment = treatment_details("trt", normal_prior(0, 10000))
+)
+
+result_match <- mcmc_sample(analysis_match, seed = 123)
 ```
 
 
@@ -161,7 +193,7 @@ is equivalent to fixed power prior weights. This allows for the combination of m
 IPTW + commensurate prior approach.
 
 
-```{r}
+```{r, echo = FALSE}
 analysis_iptw_bdb <- create_analysis_obj(
   data_matrix = example_matrix_att,
   outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000), weight_var = "att"),
@@ -169,7 +201,18 @@ analysis_iptw_bdb <- create_analysis_obj(
   treatment = treatment_details("trt", normal_prior(0, 10000))
 )
 
-result_iptw_bdb <- mcmc_sample(analysis_iptw_bdb)
+result_iptw_bdb <- mcmc_sample(analysis_iptw_bdb, seed = 123)
+```
+
+```{r, eval = FALSE}
+analysis_iptw_bdb <- create_analysis_obj(
+  data_matrix = example_matrix_att,
+  outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000), weight_var = "att"),
+  borrowing = borrowing_details("BDB", "ext", gamma_prior(0.01, 0.01)),
+  treatment = treatment_details("trt", normal_prior(0, 10000))
+)
+
+result_iptw_bdb <- mcmc_sample(analysis_iptw_bdb, seed = 123)
 ```
 
 
@@ -178,7 +221,7 @@ result_iptw_bdb <- mcmc_sample(analysis_iptw_bdb)
 We can also use weights to specify a fixed power prior model. Here we set the power parameter $\alpha = 0.1$
 for the external controls.
 
-```{r}
+```{r, echo = FALSE}
 example_matrix_pp01 <- cbind(example_matrix, pp_alpha = ifelse(example_matrix[, "ext"] == 1, 0.1, 1))
 
 analysis_pp01 <- create_analysis_obj(
@@ -188,22 +231,37 @@ analysis_pp01 <- create_analysis_obj(
   treatment = treatment_details("trt", normal_prior(0, 10000))
 )
 
-result_pp01 <- mcmc_sample(analysis_pp01)
+result_pp01 <- mcmc_sample(analysis_pp01, seed = 123)
 ```
+
+```{r, eval = FALSE}
+example_matrix_pp01 <- cbind(example_matrix, pp_alpha = ifelse(example_matrix[, "ext"] == 1, 0.1, 1))
+
+analysis_pp01 <- create_analysis_obj(
+  data_matrix = example_matrix_pp01,
+  outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000), weight_var = "pp_alpha"),
+  borrowing = borrowing_details("Full borrowing", "ext"),
+  treatment = treatment_details("trt", normal_prior(0, 10000))
+)
+
+result_pp01 <- mcmc_sample(analysis_pp01, seed = 123)
+```
+
 
 
 ## Reference Models
 
 For comparison, we also fit a full borrowing, a no borrowing, and a BDB model without weights.
 
-```{r}
+```{r, echo = FALSE}
 result_full <- mcmc_sample(
   create_analysis_obj(
     data_matrix = example_matrix,
     outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000)),
     borrowing = borrowing_details("Full borrowing", "ext"),
     treatment = treatment_details("trt", normal_prior(0, 10000))
-  )
+  ),
+  seed = 123
 )
 
 result_none <- mcmc_sample(
@@ -212,7 +270,8 @@ result_none <- mcmc_sample(
     outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000)),
     borrowing = borrowing_details("No borrowing", "ext"),
     treatment = treatment_details("trt", normal_prior(0, 10000))
-  )
+  ),
+  seed = 123
 )
 
 result_bdb <- mcmc_sample(
@@ -221,7 +280,40 @@ result_bdb <- mcmc_sample(
     outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000)),
     borrowing = borrowing_details("BDB", "ext", gamma_prior(0.01, 0.01)),
     treatment = treatment_details("trt", normal_prior(0, 10000))
-  )
+  ),
+  seed = 123
+)
+```
+
+```{r, eval = FALSE}
+result_full <- mcmc_sample(
+  create_analysis_obj(
+    data_matrix = example_matrix,
+    outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000)),
+    borrowing = borrowing_details("Full borrowing", "ext"),
+    treatment = treatment_details("trt", normal_prior(0, 10000))
+  ),
+  seed = 123
+)
+
+result_none <- mcmc_sample(
+  create_analysis_obj(
+    data_matrix = example_matrix,
+    outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000)),
+    borrowing = borrowing_details("No borrowing", "ext"),
+    treatment = treatment_details("trt", normal_prior(0, 10000))
+  ),
+  seed = 123
+)
+
+result_bdb <- mcmc_sample(
+  create_analysis_obj(
+    data_matrix = example_matrix_att,
+    outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000)),
+    borrowing = borrowing_details("BDB", "ext", gamma_prior(0.01, 0.01)),
+    treatment = treatment_details("trt", normal_prior(0, 10000))
+  ),
+  seed = 123
 )
 ```
 
